--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,28 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      * {
+        text-align: center;
+      }
+    </style>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <section>
+      redux
+      <br />
+      <div id="root_1"></div>
+      <div id="root_2"></div>
+    </section>
+    <section>
+      context
+      <br />
+      <div id="ctx_root"></div>
+      <div id="ctx_root_1"></div>
+      <div id="ctx_root_2"></div>
+    </section>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
